--- a/app/views/updateEmployee.scala.html
+++ b/app/views/updateEmployee.scala.html
@@ -1,4 +1,4 @@
-@(employee:Employee)(implicit message:Messages)
+@(employee:Employee)
 
 @main("Dashboard") {
 
@@ -51,7 +51,6 @@
                     </div>
                 </div>
             </form>
-
         </div>
     </div>
     <form action="" name="deleteEmployee" method="post">
